# mcuthallclubwebsite

./: .gitignore  LICENSE  PROMPT.md  README.md  TODO.md  app.py  db.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
components/: BottomFooter.jinja  CandidateCard.jinja  Carousel.jinja  EventCard.jinja  ExecCard.jinja  Grid.jinja  Layout.jinja  LinkButton.jinja  LoginForm.jinja  Search.jinja  SingleInputForm.jinja  TopNav.jinja
models/: events.py  feedback.py  gallery.py  models.py  role_user.py  roles.py  users.py  vote_user.py  votes.py
templates/: admin_login.jinja  candidate.jinja  committee_head_application.jinja  committees.jinja  constitution.jinja  declare_candidacy.jinja  election.jinja  error.jinja  event.jinja  events.jinja  index.jinja  login.jinja  sharktank.jinja  success.jinja  validate.jinja
templates/admin/: index.html
