[tool.poetry]
name = "mcuthallclubwebsite"
version = "0.1.0"
description = ""
authors = ["xanmankey <86136010+xanmankey@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
flask-htmx = "^0.3.2"
flask-sqlalchemy = "^3.1.1"
jinja2-fragments = "^1.6.0"
poetry-dotenv = "^0.4.0"
sqlalchemy = "^2.0.32"
wtforms = "^3.1.2"
flask-admin = "^1.6.1"
jinjax = "^0.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
